# lab2-faizan531

task4/: makefile
task5/: CMakeLists.txt
